continuamos el proyecto

--- a/templates/vehiculos antiguos.html
+++ b/templates/vehiculos antiguos.html
@@ -91,7 +91,7 @@
 
         <div class="row">
             <div class="col-12 col-md-6 bg-light p-3">
-               <img src="../static/img/FORD.jpg" class="img-fluid" alt="Imagenes del Bosque">
+               <img src="../static/img/FORD.jpg" class="img-fluid" alt="Imagenes del FORD">
             </div>
 
             <div class="col-12 col-md-6 bg-light p-3">
@@ -109,56 +109,62 @@ Además, la marca se expandió internacionalmente, creando fábricas en Europa y
                 </div>
             </div>
 
-<!-- TARJETA 1: BOSQUE -->
+<!-- TARJETA 2: Benz (Alemania) -->
         <div class="row mt-2">
             <div class="col-12 bg-warning-subtle p-1">
-                <h3>ANIMALES EXOTICOS DEL BOSQUE</h3>
+                <h3>BENZ (ALEMANIA)</h3>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12 col-md-6 bg-light p-3">
-               <img src="../static/img/BOSQUE.jpg" class="img-fluid" alt="Imagenes del Bosque">
+               <img src="../static/img/BOSQUE.jpg" class="img-fluid" alt="Imagenes del BENZ">
             </div>
 
             <div class="col-12 col-md-6 bg-light p-3">
                 <div class="card">
-                    <div class="card-header">Informacion del bosque</div>
+                    <div class="card-header">Informacion del Benz</div>
                     <div class="card-body">
-                        <p class="card-text">Un bosque es un ecosistema donde predominan los árboles y arbustos, y que alberga una amplia gama de vegetación, incluyendo hierbas y flores. Estos ecosistemas cubren aproximadamente un tercio de la superficie terrestre y son fundamentales para el equilibrio ecológico del planeta. Los bosques actúan como reguladores del clima, producen oxígeno, absorben dióxido de carbono y conservan el suelo.</p>
+                        <p class="card-text">Fundada por Karl Benz, inventor del Benz Patent-Motorwagen en 1886, considerado el primer automóvil moderno a gasolina.
+Su primer auto era de tres ruedas, podía alcanzar unos 16 km/h y tenía motor de un solo cilindro.
+La compañía se fusionó en 1926 con Daimler para formar Mercedes-Benz, que combinó lujo, innovación y tecnología avanzada.
+Benz también desarrolló temprano motores de alta eficiencia que se usaron en camiones y barcos pequeños.</p>
                         <a href="https://concepto.de/bosque/" target="_blank"
                             class="btn btn-info">Para más información</a>
                     </div>
                 </div>
             </div>
             
-<!-- TARJETA 1: BOSQUE -->
+<!-- TARJETA 3: Daimler (Alemania) -->
         <div class="row mt-2">
             <div class="col-12 bg-warning-subtle p-1">
-                <h3>ANIMALES EXOTICOS DEL BOSQUE</h3>
+                <h3>DAIMLER (ALEMANIA)</h3>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12 col-md-6 bg-light p-3">
-               <img src="../static/img/BOSQUE.jpg" class="img-fluid" alt="Imagenes del Bosque">
+               <img src="../static/img/BOSQUE.jpg" class="img-fluid" alt="Imagenes del DAIMLER">
             </div>
 
             <div class="col-12 col-md-6 bg-light p-3">
                 <div class="card">
-                    <div class="card-header">Informacion del bosque</div>
+                    <div class="card-header">Informacion del Daimler</div>
                     <div class="card-body">
-                        <p class="card-text">Un bosque es un ecosistema donde predominan los árboles y arbustos, y que alberga una amplia gama de vegetación, incluyendo hierbas y flores. Estos ecosistemas cubren aproximadamente un tercio de la superficie terrestre y son fundamentales para el equilibrio ecológico del planeta. Los bosques actúan como reguladores del clima, producen oxígeno, absorben dióxido de carbono y conservan el suelo.</p>
+                        <p class="card-text">Fundada por Gottlieb Daimler y Wilhelm Maybach en 1890.
+Pioneros en motores de combustión interna de alta velocidad que podían instalarse en vehículos pequeños.
+Antes de la fusión con Benz, fabricaban automóviles de lujo y coches de carreras, mostrando siempre innovación mecánica.
+Daimler ayudó a popularizar la idea de un auto rápido, seguro y confiable, dejando legado en Mercedes-Benz.</p>
                         <a href="https://concepto.de/bosque/" target="_blank"
                             class="btn btn-info">Para más información</a>
                     </div>
                 </div>
             </div>
 
-<!-- TARJETA 1: BOSQUE -->
+<!-- TARJETA 4:  -->
         <div class="row mt-2">
             <div class="col-12 bg-warning-subtle p-1">
-                <h3>ANIMALES EXOTICOS DEL BOSQUE</h3>
+                <h3></h3>
             </div>
         </div>
 
@@ -169,9 +175,9 @@ Además, la marca se expandió internacionalmente, creando fábricas en Europa y
 
             <div class="col-12 col-md-6 bg-light p-3">
                 <div class="card">
-                    <div class="card-header">Informacion del bosque</div>
+                    <div class="card-header">Informacion del </div>
                     <div class="card-body">
-                        <p class="card-text">Un bosque es un ecosistema donde predominan los árboles y arbustos, y que alberga una amplia gama de vegetación, incluyendo hierbas y flores. Estos ecosistemas cubren aproximadamente un tercio de la superficie terrestre y son fundamentales para el equilibrio ecológico del planeta. Los bosques actúan como reguladores del clima, producen oxígeno, absorben dióxido de carbono y conservan el suelo.</p>
+                        <p class="card-text"></p>
                         <a href="https://concepto.de/bosque/" target="_blank"
                             class="btn btn-info">Para más información</a>
                     </div>
