--- a/templates/vehiculos antiguos.html
+++ b/templates/vehiculos antiguos.html
@@ -91,7 +91,7 @@
 
         <div class="row">
             <div class="col-12 col-md-6 bg-light p-3">
-               <img src="../static/img/FORD.jpg" class="img-fluid" alt="Imagenes del FORD">
+                <img src="../static/img/FORD.jpg" class="img-fluid" alt="Imagenes del FORD">
             </div>
 
             <div class="col-12 col-md-6 bg-light p-3">
@@ -111,14 +111,14 @@ Además, la marca se expandió internacionalmente, creando fábricas en Europa y
 
 <!-- TARJETA 2: Benz (Alemania) -->
         <div class="row mt-2">
-            <div class="col-12 bg-warning-subtle p-1">
+            <div class="col-12 bg-primary-subtle p-1">
                 <h3>BENZ (ALEMANIA)</h3>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12 col-md-6 bg-light p-3">
-               <img src="../static/img/BOSQUE.jpg" class="img-fluid" alt="Imagenes del BENZ">
+                <img src="../static/img/BENZ.webp" class="img-fluid" alt="Imagenes del BENZ">
             </div>
 
             <div class="col-12 col-md-6 bg-light p-3">
@@ -129,22 +129,22 @@ Además, la marca se expandió internacionalmente, creando fábricas en Europa y
 Su primer auto era de tres ruedas, podía alcanzar unos 16 km/h y tenía motor de un solo cilindro.
 La compañía se fusionó en 1926 con Daimler para formar Mercedes-Benz, que combinó lujo, innovación y tecnología avanzada.
 Benz también desarrolló temprano motores de alta eficiencia que se usaron en camiones y barcos pequeños.</p>
-                        <a href="https://concepto.de/bosque/" target="_blank"
-                            class="btn btn-info">Para más información</a>
+                        <a href="https://www.excelsior.com.mx/trending/benz-patent-motorwagen/1697017" target="_blank"
+                            class="btn btn-primary">Para más información</a>
                     </div>
                 </div>
             </div>
             
 <!-- TARJETA 3: Daimler (Alemania) -->
         <div class="row mt-2">
-            <div class="col-12 bg-warning-subtle p-1">
+            <div class="col-12 bg-dark-subtle p-1">
                 <h3>DAIMLER (ALEMANIA)</h3>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12 col-md-6 bg-light p-3">
-               <img src="../static/img/BOSQUE.jpg" class="img-fluid" alt="Imagenes del DAIMLER">
+                <img src="../static/img/DAIMLER.webp" class="img-fluid" alt="Imagenes del DAIMLER">
             </div>
 
             <div class="col-12 col-md-6 bg-light p-3">
@@ -155,30 +155,54 @@ Benz también desarrolló temprano motores de alta eficiencia que se usaron en c
 Pioneros en motores de combustión interna de alta velocidad que podían instalarse en vehículos pequeños.
 Antes de la fusión con Benz, fabricaban automóviles de lujo y coches de carreras, mostrando siempre innovación mecánica.
 Daimler ayudó a popularizar la idea de un auto rápido, seguro y confiable, dejando legado en Mercedes-Benz.</p>
-                        <a href="https://concepto.de/bosque/" target="_blank"
-                            class="btn btn-info">Para más información</a>
+                        <a href="https://es.wikipedia.org/wiki/Daimler-Motoren-Gesellschaft#Historia" target="_blank"
+                            class="btn btn-secondary">Para más información</a>
                     </div>
                 </div>
             </div>
 
-<!-- TARJETA 4:  -->
+<!-- TARJETA 4: Peugeot (Francia) -->
         <div class="row mt-2">
-            <div class="col-12 bg-warning-subtle p-1">
-                <h3></h3>
+            <div class="col-12 bg-danger-subtle p-1">
+                <h3>PEUGEOT (FRANCIA)</h3>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12 col-md-6 bg-light p-3">
-               <img src="../static/img/BOSQUE.jpg" class="img-fluid" alt="Imagenes del Bosque">
+                <img src="../static/img/PEUGEOT.jpeg" class="img-fluid" alt="Imagenes del PEUGEOT">
             </div>
 
             <div class="col-12 col-md-6 bg-light p-3">
                 <div class="card">
-                    <div class="card-header">Informacion del </div>
+                    <div class="card-header">Informacion del Peugeot</div>
                     <div class="card-body">
-                        <p class="card-text"></p>
-                        <a href="https://concepto.de/bosque/" target="_blank"
+                        <p class="card-text">Peugeot es una marca de la industria automotriz con sede en Poissy, Francia, especializado en la fabricación de turismos, vehículos comerciales, automóviles de carreras, servicios de movilidad como alquiler de vehículos, bicicletas, motonetas, así como útiles de cocina como saleros, pimenteros y molinillos de café. Los molinillos fueron su primer producto y más tarde se dedicaría a la fabricación de automóviles con el nombre «Les fils de Peugeot frères» (Hijos de los hermanos Peugeot). Hoy en día los utensilios de cocina los fabrica Peugeot Saveurs.</p>
+                        <a href="https://es.wikipedia.org/wiki/Peugeot" target="_blank"
+                            class="btn btn-danger">Para más información</a>
+                    </div>
+                </div>
+            </div>
+</div>
+
+<!-- TARJETA 5: Renault (Francia) -->
+        <div class="row mt-2">
+            <div class="col-12 bg-info-subtle p-1">
+                <h3>RENAULT (FRANCIA)</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-md-6 bg-light p-3">
+                <img src="../static/img/RENAULT.jpg" class="img-fluid" alt="Imagenes del RENAULT">
+            </div>
+
+            <div class="col-12 col-md-6 bg-light p-3">
+                <div class="card">
+                    <div class="card-header">Informacion del Renault</div>
+                    <div class="card-body">
+                        <p class="card-text">La historia de Renault es una parte fundamental de la historia del motor en Francia y en todo el mundo. Esta marca, fundada por Louis Renault en 1898, ha sido testigo de los grandes acontecimientos del siglo XX y ha contribuido de manera decisiva al desarrollo de la industria automovilística. En este artículo vamos a repasar los momentos más destacados de la historia de Renault, desde sus inicios hasta la actualidad, pasando por las dos guerras mundiales, la producción en serie, las victorias en la competición y la expansión internacional. Además, conoceremos los modelos más emblemáticos de la marca y sus avances en materia de tecnología y sostenibilidad. Todo ello conforma una historia apasionante que merece la pena conocer en detalle.</p>
+                        <a href="https://locosporloscoches.com/historia-de-renault-desde-sus-inicios-hasta-la-actualidad/" target="_blank"
                             class="btn btn-info">Para más información</a>
                     </div>
                 </div>
